change package name

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "markdown": "^0.5.0",
     "react": "^16.8.6",
     "react-contextmenu": "^2.10.0",
-    "react-data-grid": "file:packages/react-data-grid",
-    "react-data-grid-addons": "file:packages/react-data-grid-addons",
+    "react-data-grid-v7": "file:packages/react-data-grid",
+    "react-data-grid-addons-v7": "file:packages/react-data-grid-addons",
     "react-dnd-test-backend": "^2.6.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
