--- a/packages/react-data-grid/package.json
+++ b/packages/react-data-grid/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-data-grid",
+  "name": "react-data-grid-v7",
   "version": "7.0.0-alpha.22",
   "description": "Excel-like grid component built with React, with editors, keyboard navigation, copy & paste, and the like",
   "author": "Adazzle",
