--- a/packages/react-data-grid-addons/package.json
+++ b/packages/react-data-grid-addons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-data-grid-addons",
+  "name": "react-data-grid-addons-v7",
   "version": "7.0.0-alpha.22",
   "description": "A set of addons for react-data-grid",
   "author": "Adazzle",
